[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
regex = "1.7.0"
lazy_static = "1.4.0"
itertools = "0.10.5"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[[bin]]
name = "day07"
path = "src/day07/main.rs"

[[bin]]
name = "day09"
path = "src/day09/main.rs"